app/styles/AboutPage.css
.about-section {
  padding: 3rem 10rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 4rem;
}
.about-text h1 {
  font-size: 2.4rem;
  line-height: 1.2;
  margin-bottom: 1rem;
  font-weight: 100;
  color:#3f3e3e
}

.about-container {
  display: grid;
  grid-template-columns: 8fr 3fr;
  gap: 3rem;
  width: 100%;
}


.about-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: left;
}

.about-text p {
  font-size: 1rem;
  font-weight: 300;
  color: gray;
  line-height: 1.6;
}

.highlight {
  font-weight: 500;
  color: #000;
}

.about-image {
  margin-top: 3rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 390px;
  height: 375px;
  border-radius: 8px;
  box-shadow: 1px 5px 4px 5px rgba(0, 0, 0, 0.1);
}

.gallery-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.gallery-title {
  font-weight: 100;
  font-size: 2.4rem;
  color: #3f3e3e;
  text-align: left;
}

.image-row {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 6rem;
}

.image-row img {
  width: 225px;
  height: 225px;
  object-fit: cover;
}

/* Responsive */
@media (max-width: 900px) {
  .about-section {
    padding: 2rem;
    gap: 3rem;
  }
  .about-container {
    grid-template-columns: 1fr;
    gap: 2rem;
  }
  .about-image {
    width: 100%;
    height: auto;
    justify-content: center;
  }
  .gallery-title {
    font-size: 2rem;
    text-align: left;
    width: 100%;
  }
  .image-row {
    grid-template-columns: repeat(2, 1fr);
    gap: 1.25rem;
    width: 100%;
  }
  .image-row img {
    width: 100%;
    height: 160px;
    border-radius: 8px;
  }
}

@media (max-width: 1024px) {
  .about-section {
    padding: 2rem 4rem;
    gap: 3rem;
  }
  .about-container {
    grid-template-columns: 1fr;
    gap: 2rem;
  }
  .about-image {
    width: 100%;
    height: auto;
    justify-content: center;
  }
  .gallery-title {
    font-size: 2rem;
    text-align: center;
  }
  .image-row {
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
    width: 100%;
    justify-items: center;
  }
  .image-row img {
    width: 80%;
    width: 300px;
    height: 300px;
    border-radius: 8px;
  }
}

@media (max-width: 600px) {
  .about-section {
    padding: 1.25rem;
    gap: 2rem;
  }
  .about-text h1 {
    font-size: 1.8rem;
    text-align: center;
  }
  .about-text p {
    font-size: 0.95rem;
    text-align: center;
  }
  .about-image {
    width: 100%;
    height: auto;
    justify-content: center;
    margin-top: 1rem;
  }
  .gallery-title {
    font-size: 1.75rem;
    text-align: center;
  }
  .image-row {
    grid-template-columns: 1fr;
    gap: 1rem;
    width: 100%;
  }
  .image-row img {
    width: 300px;
    height: 200px;
  }
}


@media (max-width: 375px) {
  .about-section {
    padding: 1rem;
    gap: 1.5rem;
  }
  .about-text h1 {
    font-size: 1.5rem;
  }
  .about-text p {
    font-size: 0.9rem;
  }
  .gallery-title {
    font-size: 1.5rem;
  }
  .image-row img {
    height: 180px;
  }
}

